# Actix-web-template

./: Cargo.toml  LICENSE  watch.toml
src/: db.rs  main.rs  router.rs
src/models/: user.rs
src/routes/: Main.rs  mod.rs
