[package]
name = "Actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.6.0" ,features = ["tokio-sync"] }

[dev-dependencies]
cargo-watch = "8.4.0"